welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: Missing closing brace `}' assumed here
def marquerSol() {baisseBrosse();leveBrosse()}
^PatternPicture:1: error: expected class or object definition
def marquerSol() {baisseBrosse();leveBrosse()}
^PatternPicture:3: error: expected class or object definition
def faire2casesA(c:Color) {
^PatternPicture:17: error: expected class or object definition
def transition1() {
^PatternPicture:22: error: expected class or object definition
def faire2casesB(c:Color) {
^